banner ie alignment fix

--- a/node-app/src/views/core/components/content/teaser/styles.scss
+++ b/node-app/src/views/core/components/content/teaser/styles.scss
@@ -247,6 +247,7 @@
             margin: 0 !important;
             padding: 30px;
             text-align: center;
+            display: table;
             p {
                 margin: 0;
             }
